deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: assessment
spec:
  rules:
    - host: assessment.pepris.com 
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend 
            servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: assessment
spec:
  ports:
  - port: 80
    name: frontend 
  selector:
    project: pepris
    app: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: assessment 
spec:
  replicas: 2
  selector:
    matchLabels:
      project: pepris
      app: frontend
  template:
    metadata:
      labels:
        project: pepris 
        app: frontend
    spec:
      imagePullSecrets:
      - name: harbor-admin
      containers:
      - name: frontend
        image: frontend:v1.0
        ports:
          - protocol: TCP
            containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1
            memory: 2Gi
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          name: nginx-config
      volumes:
      - name: nginx-config
        configMap:
          defaultMode: 493
          name: nginx-config
